# CSVExamine

./: CMakeLists.txt  CSVExamine.ini  CSVExamine.mm  Description.txt  LICENSE  README.md  utf8.csv
src/: CSVExamine.mm
test/: uparrow.csv
